force-app/main/default/objects/Product2/fields/AnnualDiscount__c.field-meta.xml
<CustomField>
    <fullName>AnnualDiscount__c</fullName>
    <label>Annual Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Subscription Fee</fullName>
            </value>
            <value>
                <fullName>Implementation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>