force-app/main/default/objects/Product2/fields/Expose_on_site__c.field-meta.xml
<CustomField>
    <fullName>Expose_on_site__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Expose on site</label>
    <type>Checkbox</type>
</CustomField>