force-app/main/default/objects/Product2/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guest Management</fullName>
                <label>Gain full control of managing your guests by leveraging our mobile and desktop app.</label>
            </value>
            <value>
                <fullName>Reservation Management</fullName>
                <label>Save up on operational costs by digitizing your reservation calendar for real-time online booking.</label>
            </value>
            <value>
                <fullName>Housekeeping Management</fullName>
                <label>Monitor your staff, assign tasks, systematically handle checklists all from the comfort of your room, office, or wherever.</label>
            </value>
            <value>
                <fullName>User Management</fullName>
                <label>Save money on software license purchases by getting multiple user access, total control, and integration of your whole establishment.</label>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
                <label>Never have an inventory out of place with automated tracking of inventory across multiple channels and devices.</label>
            </value>
            <value>
                <fullName>Availability Hour Grid</fullName>
                <label>Improve room efficiency by managing the availability of your rooms or properties with this powerful and dynamic interface.</label>
            </value>
            <value>
                <fullName>Invoicing + Payment API</fullName>
                <label>Create, send out your invoices, and receive payments without worrying about manual bookkeeping anymore.</label>
            </value>
            <value>
                <fullName>Reporting</fullName>
                <label>Monitor your business statistics online, collect and analyze data to be used to develop future forecasts, marketing plans, and track progress with the latest technology.</label>
            </value>
            <value>
                <fullName>Mobile Apps</fullName>
                <label>Get push notification, instant updates, and instant online access with the Booking Ninjas mobile apps available across android and ios platforms.</label>
            </value>
            <value>
                <fullName>Add-On Features*</fullName>
                <label>Add extensions to the Booking Ninjas core PMS to create an even more customized instance for your business.</label>
            </value>
            <value>
                <fullName>Gestión de Huéspedes</fullName>
                <label>Obtén el control total de la gestión de tus huéspedes sacando provecho de nuestra aplicación para móviles y ordenadores.</label>
            </value>
            <value>
                <fullName>Gestión de Reservas</fullName>
                <label>Ahorra gastos de funcionamiento mediante la digitalización de tu calendario de reservas. Esto incorporará en tiempo real las reservas realizadas de forma online.</label>
            </value>
            <value>
                <fullName>Gestión del Servicio de Limpieza</fullName>
                <label>Controla a tu plantilla, asigna tareas y gestiona las listas de comprobación desde la comodidad de tu habitación, tu oficina o cualquier otro lugar.</label>
            </value>
            <value>
                <fullName>Gestión de Usuarios</fullName>
                <label>Olvídate de comprar licencias de softwares mediante la obtención de acceso para varios usuarios, control total e integración de todo tu establecimiento.</label>
            </value>
            <value>
                <fullName>Gestión del Inventario</fullName>
                <label>Olvídate de tener inventario fuera de lugar gracias al seguimiento automatizado del inventario, a través de varios canales y dispositivos.</label>
            </value>
            <value>
                <fullName>Cuadrícula con Horario de Disponibilidad</fullName>
                <label>Mejora el rendimiento de las habitaciones mediante la gestión de la disponibilidad de tus habitaciones o propiedades y gracias a este interfaz potente y dinámica.</label>
            </value>
            <value>
                <fullName>Facturación + API de Pagos</fullName>
                <label>Crea, envía tus facturas y recibe pagos sin tener que preocuparte más de hacer la contabilidad de forma manual.</label>
            </value>
            <value>
                <fullName>Informes</fullName>
                <label>Monitoriza de forma online las estadísticas de tu negocio, recopila y analiza datos para crear pronósticos, planes de marketing y haz seguimientos con la última tecnología.</label>
            </value>
            <value>
                <fullName>Aplicaciones Móviles</fullName>
                <label>Obtén notificaciones emergentes, actualizaciones de inmediato y acceso online instantáneo con las aplicaciones móviles de Booking Ninjas disponibles en plataformas iOS y Android.</label>
            </value>
            <value>
                <fullName>Complementos *</fullName>
                <label>Añade complementos al PMS central de Booking Ninjas para crear un negocio todavía más personalizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>