force-app/main/default/objects/Product2/fields/Hierarchy_Order__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Order__c</fullName>
    <description>Products hierarchy order on the site</description>
    <label>Hierarchy Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>