force-app/main/default/objects/Product2/fields/ImplementationDeposit__c.field-meta.xml
<CustomField>
    <fullName>ImplementationDeposit__c</fullName>
    <label>Implementation Deposit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>