force-app/main/default/objects/Product2/fields/ImplementationFee__c.field-meta.xml
<CustomField>
    <fullName>ImplementationFee__c</fullName>
    <label>Implementation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>