force-app/main/default/objects/Product2/fields/MonthlyFee__c.field-meta.xml
<CustomField>
    <fullName>MonthlyFee__c</fullName>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>