force-app/main/default/objects/Product2/fields/Product_Region__c.field-meta.xml
<CustomField>
    <fullName>Product_Region__c</fullName>
    <description>Choose product language/region</description>
    <label>Product Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(BR) Brazil</fullName>
            </value>
            <value>
                <fullName>(EN) English</fullName>
                <default>true</default>
                <label>(EN) English</label>
            </value>
            <value>
                <fullName>(FR) France</fullName>
            </value>
            <value>
                <fullName>(DE) Germany</fullName>
            </value>
            <value>
                <fullName>(PT) Portugal</fullName>
            </value>
            <value>
                <fullName>(ES) Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>