force-app/main/default/objects/Product2/fields/Show_big_card__c.field-meta.xml
<CustomField>
    <fullName>Show_big_card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows big card on website</description>
    <label>Show big card</label>
    <type>Checkbox</type>
</CustomField>