force-app/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-500</fullName>
            </value>
            <value>
                <fullName>500-1,500</fullName>
            </value>
            <value>
                <fullName>1,500-4,000</fullName>
            </value>
            <value>
                <fullName>4,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>