force-app/main/default/objects/Product2/fields/Small_Description__c.field-meta.xml
<CustomField>
    <fullName>Small_Description__c</fullName>
    <label>Small Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>