force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Region__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Expose_on_site__c</columns>
    <columns>AnnualDiscount__c</columns>
    <columns>Hierarchy_Order__c</columns>
    <columns>ImplementationDeposit__c</columns>
    <columns>ImplementationFee__c</columns>
    <columns>Size__c</columns>
    <columns>MonthlyFee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Region__c</field>
        <operation>equals</operation>
        <value>(BR) Brazil,(EN) English,(FR) France,(DE) Germany,(PT) Portugal,(ES) Spain</value>
    </filters>
    <label>All Products</label>
</ListView>